--- a/sec1.html
+++ b/sec1.html
@@ -23,10 +23,14 @@
         }
 
         /* Encabezado */
-        .header {
-            background-color: rgba(255, 255, 255, 0);
-            color: #fff;
-            padding: 10px;
+       .header {
+	background-color: rgba(255, 255, 255, 0);
+            background-image: url
+            background-size: cover; 
+            background-repeat: no-repeat; 
+            background-attachment: fixed; 
+            color: #fff; 
+            padding: 3px;
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -41,7 +45,7 @@
         .header a {
             color: #FFF;
             text-decoration: none;
-            margin: 0 5px;
+            margin: 0 2px;
             padding: 3px 6px;
             border: 1px solid #fff;
             border-radius: 4px;
@@ -165,42 +169,11 @@ object-fit: cover;
         .menu-toggle {
             display: block;
             color: #fff;
-            font-size: 24px;
+            font-size: 20px;
             margin-left: auto;
             cursor: pointer;
-		top
         }
-
-        .header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            background-color: rgba(255, 255, 255, 0);
-            color: #fff;
-            padding: 2px;
-            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
-        }
-
-        .header .logo img {
-            width: 100px;
-            height: auto;
-        }
-
-        .header a {
-            color: #FFF;
-            text-decoration: none;
-            margin: 0 15px;
-            padding: 3px 6px;
-            border: 1px solid #fff;
-            border-radius: 4px;
-            transition: all 0.7s ease;
-        }
-
-        .header a:hover {
-            background-color: #C11A1A;
-            border: 1px solid #C11A1A;
-        }
-
+        
         @media screen and (min-width: 769px) {
             .navbar {
                 display: none;
