--- a/sec2.html
+++ b/sec2.html
@@ -23,22 +23,16 @@
 
         /* Encabezado */
         .header {
-            background-color: rgba(255, 255, 255, 0);
-            color: #fff;
-            padding: 10px;
+	background-color: rgba(255, 255, 255, 0);
+            background-image: url
+            background-size: cover; 
+            background-repeat: no-repeat; 
+            background-attachment: fixed; 
+            color: #fff; 
+            padding: 3px;
             display: flex;
             justify-content: space-between;
             align-items: center;
-            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
-        }
-
-         .header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            background-color: rgba(255, 255, 255, 0);
-            color: #fff;
-            padding: 10px;
             box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
         }
 
@@ -50,8 +44,8 @@
         .header a {
             color: #FFF;
             text-decoration: none;
-            margin: 0 15px;
-            padding: 5px 10px;
+            margin: 0 2px;
+            padding: 3px 6px;
             border: 1px solid #fff;
             border-radius: 4px;
             transition: all 0.7s ease;
