--- a/eje.html
+++ b/eje.html
@@ -132,33 +132,71 @@
 	.imge{
 	flex: 1;
 		}
-@media only screen and (min-width: 480px) and (max-width: 991px)
-	{
+.rotating-element {
+  width: 800px;
+  height: 30px;
+  line-height: 300px;
+  transition: transform 0.5s ease-in-out; 
+}
+
+.rotating-element:hover {
+  transform: rotateY(360deg); 
+    
+.container h2{
+    background-image: linear-gradient(to right, #FF3300, #FF6600, #FF9900, #FFCC00, #FFFF00);
+    -webkit-background-clip: text;
+    color: transparent;
+}
+.container img
+{
+object-fit: cover;
+  width:100%;
+  height:100%;
+}
+
+        /* Menú de navegación receptivo */
+       .navbar {
+            display: flex;
+            background-color: rgba(255, 255, 255, 0.9);
+            position: absolute;
+            top: 80px;
+            width: 100%;
+            flex-direction: column;
+            text-align: center;
+            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+            display: none;
+        }
+
+        .navbar a {
+            display: block;
+            padding: 2px 0;
+            color: #000; /* Añadido para cambiar el color del texto del enlace */
+            text-decoration: none; /* Añadido para quitar la subraya del enlace */
+        }
+
+        .menu-toggle {
+            display: block;
+            color: #fff;
+            font-size: 20px;
+            margin-left: auto;
+            cursor: pointer;
+        }
+
+
+      
+        @media screen and (min-width: 769px) {
+            .navbar {
+                display: none;
+            }
+
             .header {
-                flex-direction: column;
-                text-align: center;
+                display: flex;
             }
-
-            .header h1 {
-                margin-top: 10px;
-            }
-
-            .header .logo img {
-                margin-bottom: 10px;
-            }
-
-            .button-container {
-                margin-bottom: 20px;
-            }
-
-            .container {
-                padding: 10px;
-		 height: auto;
-		width: auto;
-		display:none;
-            }
-
-        }    
+		.ima .cal img{
+		width:300px;
+		height:200px;
+		}	
+        }
 </style>
 
 </head>
