--- a/eje.html
+++ b/eje.html
@@ -10,8 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
     <link rel="icon" href="favicon.png" type="image/x-icon"> 
 <style>
-        /* Estilos globales */
-        body {
+       body {
             font-family: 'Verdana', sans-serif;
             margin: 0;
             padding: 0;
@@ -23,10 +22,14 @@
         }
 
         /* Encabezado */
-        .header {
-            background-color: rgba(255, 255, 255, 0);
-            color: #fff;
-            padding: 10px;
+         .header {
+	background-color: rgba(255, 255, 255, 0);
+            background-image: url
+            background-size: cover; 
+            background-repeat: no-repeat; 
+            background-attachment: fixed; 
+            color: #fff; 
+            padding: 3px;
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -41,8 +44,8 @@
         .header a {
             color: #FFF;
             text-decoration: none;
-            margin: 0 15px;
-            padding: 5px 10px;
+            margin: 0 2px;
+            padding: 3px 6px;
             border: 1px solid #fff;
             border-radius: 4px;
             transition: all 0.7s ease;
@@ -52,6 +55,7 @@
             background-color: #C11A1A;
             border: 1px solid #C11A1A;
         }
+
 
         /* Tabla */
         .table-container {
@@ -104,21 +108,15 @@
         }
 
         /* Pie de Página */
-          footer {
-	    background-color: rgba(255, 255, 255, 0);
-	    position: absolute;
+        footer {
+		background-color: rgba(255, 255, 255, 0);
             color: #000000;
             padding: 10px 0;
             text-align: center;
-	    width: 100%;
-  	    height: 40px;
             box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.2);
         }
 	.container 
 	{
-		background-color: rgba(255, 255, 255, 0); 
-	    display:flex;
-	    aling-items:center; 
             max-width: 800px;
             margin: 20px auto;
             padding: 20px;
@@ -126,12 +124,6 @@
             box-shadow: 0 0 10px rgb(223, 128, 0);
 		border-radius: 20px; 
         }
-	.text{
-	flex: 1;
-		}
-	.imge{
-	flex: 1;
-		}
 .rotating-element {
   width: 800px;
   height: 30px;
