--- a/sec3.html
+++ b/sec3.html
@@ -222,6 +222,8 @@ object-fit: cover;
                 <li><a class="button1" href="https://forms.gle/Uh5oEX5VgbRZrLGB9">CLICK AQUI para comenzar el examen (AREA DE COMPRAS).</a> </li>
                 <br>
                 <li><a class="button1" href="https://forms.gle/2qoxX5HfS6529DT27">CLICK AQUI para comenzar el examen(AREA DE VENTAS).</a> </li>
+		 <br>
+                <li><a class="button1" href="https://forms.gle/Yms5vbp8EqGTyuzJ9">CLICK AQUI para comenzar el examen(AREA DE VENTAS).</a> </li>
             </ol>
         </section>
     </div>
