--- a/sec3.html
+++ b/sec3.html
@@ -209,21 +209,21 @@ object-fit: cover;
             <p>SELECCIONA EL ÁREA EN LA QUE ESTÁS PARA REALIZAR EL EXAMEN CORRESPONDIENTE</p>        
 
             <ol>
-                <li><a class="button1" href="https://forms.gle/MTzs8r3vDeVP8Rb58">CLICK AQUI para comenzar el examen (AREA DE ALMACEN).</a> </li>
+                <li><a class="button1" href="https://forms.gle/MTzs8r3vDeVP8Rb58">CLICK AQUI para comenzar el examen (ÁREA DE ALMACEN).</a> </li>
             <br>   
- 		<li><a class="button1" href="https://forms.gle/Uh5oEX5VgbRZrLGB9">CLICK AQUI para comenzar el examen (AREA DE COMPRAS).</a> </li>
+ 		<li><a class="button1" href="https://forms.gle/Uh5oEX5VgbRZrLGB9">CLICK AQUI para comenzar el examen (ÁREA DE COMPRAS).</a> </li>
             <br>
-                <li><a class="button1" href="https://forms.gle/Yms5vbp8EqGTyuzJ9">CLICK AQUI para comenzar el examen(AREA DE DISEÑO).</a> </li>
+                <li><a class="button1" href="https://forms.gle/Yms5vbp8EqGTyuzJ9">CLICK AQUI para comenzar el examen (ÁREA DE DISEÑO).</a> </li>
              <br>
                 <li><a class="button1" href="https://forms.gle/dELPviaBsrgbjRXo8">CLICK AQUI para comenzar el examen (ÁREA DE FACTURACIÓN).</a></li>
              <br>
-                <li><a class="button1" href="https://forms.gle/6L1TQC2RtPngfN5D8">CLICK AQUI para comenzar el examen (AREA DE HIGIENE Y SEGURIDAD).</a> </li>
+                <li><a class="button1" href="https://forms.gle/6L1TQC2RtPngfN5D8">CLICK AQUI para comenzar el examen (ÁREA DE HIGIENE Y SEGURIDAD).</a> </li>
              <br>             
-		<li><a class="button1" href="https://forms.gle/PmMUYgKFLSuxvJpKA">CLICK AQUI para comenzar el examen (AREA DE IMPRESIÓN).</a> </li>
+		<li><a class="button1" href="https://forms.gle/PmMUYgKFLSuxvJpKA">CLICK AQUI para comenzar el examen (ÁREA DE IMPRESIÓN).</a> </li>
              <br>
-                <li><a class="button1" href="https://forms.gle/SmSW4iB6RDFym3yWA">CLICK AQUI para comenzar el examen (AREA DE RECURSOS HUMANOS).</a> </li>
+                <li><a class="button1" href="https://forms.gle/SmSW4iB6RDFym3yWA">CLICK AQUI para comenzar el examen (ÁREA DE RECURSOS HUMANOS).</a> </li>
              <br>
-		<li><a class="button1" href="https://forms.gle/2qoxX5HfS6529DT27">CLICK AQUI para comenzar el examen(AREA DE VENTAS).</a> </li>
+		<li><a class="button1" href="https://forms.gle/2qoxX5HfS6529DT27">CLICK AQUI para comenzar el examen (ÁREA DE VENTAS).</a> </li>
 	     <br>
 
                 </ol>
