--- a/cal.html
+++ b/cal.html
@@ -192,6 +192,8 @@ object-fit: cover;
 		}	
         }
     </style>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4547897550281334"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
