--- a/eje.html
+++ b/eje.html
@@ -190,7 +190,8 @@ object-fit: cover;
 		}	
         }
 </style>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4547897550281334"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="header">
