--- a/sec3.html
+++ b/sec3.html
@@ -9,7 +9,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.4/xlsx.full.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
     <link rel="icon" href="favicon.png" type="image/x-icon"> 
-     <style>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4547897550281334" crossorigin="anonymous"></script>
+ <style>
         body {
             font-family: 'Verdana', sans-serif;
             margin: 0;
@@ -182,8 +183,7 @@ object-fit: cover;
             }
         }
     </style>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4547897550281334"
-     crossorigin="anonymous"></script>
+
 </head>
 <body>
          <header class="header">
