--- a/sec2.html
+++ b/sec2.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4547897550281334" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>¿QUE ES FSC?</title>
     <link rel="icon" href="favicon.png" type="image/x-icon">
@@ -184,7 +185,7 @@ object-fit: cover;
             }
         }
     </style>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4547897550281334"
+
      crossorigin="anonymous"></script>
 </head>
 <body>
