--- a/eje.html
+++ b/eje.html
@@ -220,12 +220,11 @@ object-fit: cover;
     <li> <font color="#9900FF"> Seguridad del producto:</font>  Asegurarse de que las bolsas fabricadas sean seguras para su uso previsto y no contengan materiales o sustancias dañinas.</li>
     <li> <font color="#9900FF"> Trazabilidad:</font>  Llevar registros detallados de materias primas, procesos de fabricación y distribución para poder rastrear los productos en caso de problemas.</li>
     <li> <font color="#9900FF"> Capacitación del personal:</font>  Capacitar al personal en las BPM y asegurarse de que estén al tanto de las prácticas seguras de fabricación.</li>
-			  
-<li>Almacenamiento adecuado: Almacenar las materias primas y productos terminados de manera adecuada para prevenir daños, contaminación o deterioro.</li>
-    <li>Etiquetado: Etiquetar claramente las bolsas con información relevante, como el tipo de material, instrucciones de uso y advertencias.</li>
-    <li>Documentación: Mantener registros precisos de todos los procesos de fabricación y de cualquier problema o desviación de las BPM.</li>
-    <li>Manejo de residuos: Gestionar adecuadamente los residuos generados durante el proceso de fabricación de bolsas, de acuerdo con las regulaciones ambientales.</li>
-    <li>Mejora continua: Buscar constantemente formas de mejorar los procesos y la calidad de los productos.</li>
+    <li> <font color="#9900FF"> Almacenamiento adecuado:</font>  Almacenar las materias primas y productos terminados de manera adecuada para prevenir daños, contaminación o deterioro.</li>
+    <li> <font color="#9900FF"> Etiquetado:</font>  Etiquetar claramente las bolsas con información relevante, como el tipo de material, instrucciones de uso y advertencias.</li>
+    <li> <font color="#9900FF"> Documentación:</font> Mantener registros precisos de todos los procesos de fabricación y de cualquier problema o desviación de las BPM.</li>
+    <li> <font color="#9900FF"> Manejo de residuos:</font>  Gestionar adecuadamente los residuos generados durante el proceso de fabricación de bolsas, de acuerdo con las regulaciones ambientales.</li>
+    <li> <font color="#9900FF"> Mejora continua:</font>  Buscar constantemente formas de mejorar los procesos y la calidad de los productos.</li>
 		<div style="text-align: center;">	
 			<div class="imge">
  			<img src="b2.jpg" alt="BPM">
