--- a/sec3.html
+++ b/sec3.html
@@ -208,7 +208,7 @@ object-fit: cover;
             <h2>EXAMENES PARA DIFERENTES AREAS</h2>
             <p align="justify">En esta sección de la página se pone a prueba los conocimientos de la persona a quien se le aplique. Es un cuestionario de 10 preguntas el cual está hecho en GOOGLE FORM y los resultados de la evaluación serán guardados.</p>
             
-            <p>SELECCIONA EL ÁREA EN LA QUE ESTÁS PARA REALIZAR EL EXAMEN CORRESPONDIENTE</p>        
+            <p><font color="#FF0C00">SELECCIONA EL ÁREA EN LA QUE ESTÁS PARA REALIZAR EL EXAMEN CORRESPONDIENTE</font></p>        
 
             <ol>
                 <li><a class="button1" href="https://forms.gle/MTzs8r3vDeVP8Rb58">CLICK AQUI para comenzar el examen (ÁREA DE ALMACEN).</a> </li>
