--- a/index.html
+++ b/index.html
@@ -163,6 +163,16 @@ object-fit: cover;
             display: none;
         }
 
+.navbar1 {
+            display: flex;
+            position: absolute;
+            top: 80px;
+            width: 100%;
+            flex-direction: column;
+            text-align: center;
+            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+            display: none;
+        }
         .navbar a {
             display: block;
             padding: 2px 0;
@@ -240,7 +250,11 @@ object-fit: cover;
 
     <footer>
         <strong>REALIZADA POR JONATHAN PAZ GALLARDO</strong>
-    </footer>
+ <nav class="navbar1">
+<a href="https://www.facebook.com/jonathan.paz.75286" target="_blank"><img alt="Contactame" src="facebook.png" width=48 height=48 /></a>
+<a href="https://www.instagram.com/jonathan030727/" target="_blank"><img alt="Contactame" src="instagram.png" width=48 height=48 /></a>
+	</nav>    
+</footer>
 
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script>
