--- a/cal.html
+++ b/cal.html
@@ -163,6 +163,16 @@ object-fit: cover;
             display: none;
         }
 
+.navbar1 {
+            display: flex;
+            position: absolute;
+            top: 80px;
+            width: 100%;
+            flex-direction: column;
+            text-align: center;
+            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+            display: none;
+        }
         .navbar a {
             display: block;
             padding: 2px 0;
@@ -235,15 +245,16 @@ object-fit: cover;
 		</div>
             <p align="justify">El control de calidad tiene como principal función dar seguimiento a cada etapa del proceso productivo para detectar oportunamente posibles fallas en el producto. Y, en caso de presentarse alguna, aplicar las soluciones o mejoras necesarias que permitan el cumplimiento de requisitos y normas de cada prototipo</p>
         </section>
-        <p align="center">Haz <a href="https://docs.google.com/forms/d/e/1FAIpQLSfPvaaWp0qliDR4E-puMyeHo9xOiXv76Uil81ZRDqfUCGPxGg/viewform?usp=sf_link">CLICK</a> para realizar el examen de CAPACITACION PARA CALIDAD</p></font>
-	    
-	 <font color="#9900FF"> <p align="center">Haz <a href="https://forms.gle/m2QYxXxG72tpJNWf9">CLICK</a> para evaluar la limpieza de las maquinas</p>
-   	
- </div>
+        <p align="center">Haz <a href="https://docs.google.com/forms/d/e/1FAIpQLSfPvaaWp0qliDR4E-puMyeHo9xOiXv76Uil81ZRDqfUCGPxGg/viewform?usp=sf_link">CLICK</a> para realizar el examen de CAPACITACION PARA CALIDAD</p>
+    </div>
 
     <footer>
         <strong>REALIZADA POR JONATHAN PAZ GALLARDO</strong>
-    </footer>
+ <nav class="navbar1">
+<a href="https://www.facebook.com/jonathan.paz.75286" target="_blank"><img alt="Contactame" src="facebook.png" width=48 height=48 /></a>
+<a href="https://www.instagram.com/jonathan030727/" target="_blank"><img alt="Contactame" src="instagram.png" width=48 height=48 /></a>
+	</nav>    
+</footer>
 
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script>
