--- a/eje.html
+++ b/eje.html
@@ -158,7 +158,16 @@ object-fit: cover;
             box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
             display: none;
         }
-
+.navbar1 {
+            display: flex;
+            position: absolute;
+            top: 80px;
+            width: 100%;
+            flex-direction: column;
+            text-align: center;
+            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+            display: none;
+        }
         .navbar a {
             display: block;
             padding: 2px 0;
@@ -236,7 +245,11 @@ object-fit: cover;
 </div>
     </header>
 </body>
-<footer>
-<strong>REALIZADA POR JONATHAN PAZ GALLARDO</strong>
+ <footer>
+        <strong>REALIZADA POR JONATHAN PAZ GALLARDO</strong>
+ <nav class="navbar1">
+<a href="https://www.facebook.com/jonathan.paz.75286" target="_blank"><img alt="Contactame" src="facebook.png" width=48 height=48 /></a>
+<a href="https://www.instagram.com/jonathan030727/" target="_blank"><img alt="Contactame" src="instagram.png" width=48 height=48 /></a>
+	</nav>    
 </footer>
 </html>
