--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             font-family: 'Verdana', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f5f5f5;
+            background-color: #ffffff;
 	    background-image: url('fondo22.jpg');
 	    background-size: cover; 
 	    background-repeat: no-repeat; 
@@ -119,15 +119,7 @@
             text-align: center;
             box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.2);
         }
-	.container 
-	{
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 20px;
-            background-color: #fff;
-            box-shadow: 0 0 10px rgb(223, 128, 0);
-		border-radius: 20px; 
-        }
+	
 .rotating-element {
   width: 800px;
   height: 30px;
