--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
             font-family: 'Verdana', sans-serif;
             margin: 0;
             padding: 0;
+	    color: #fff;
             background-color: #ffffff;
-	    background-image: url('fondo22.jpg');
+	    background-image: url('fondo11.jpg');
 	    background-size: cover; 
 	    background-repeat: no-repeat; 
 	    background-attachment: fixed; 
